<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="app_name">京东商城(案例)</string>
    <string name="ActivityMainTitle">京东商城</string>
    <string name="main_navigation_home">首页</string>
    <string name="main_navigation_catagory">分类</string>
    <string name="main_navigation_car">购物车</string>
    <string name="main_code_buy">我的京东</string>
    <string name="main_navigation_more">更多</string>
    <string name="app_close">关闭应用程序</string>
    <string name="btn_cancel">取 消</string>
    <string name="btn_ok">确 定</string>
    <string name="cart_item_hint">购物车还是空的,快去选购吧~ !</string>
    <string name="title_activity_buy">BuyActivity</string>
    <string name="title_activity_car">CarActivity</string>
    <string name="title_activity_category">CategoryActivity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_more">MoreActivity</string>

    <string name="commodity_detail_size">尺码:</string>
	<string name="commodity_detail_input_cart">加入购物车</string>
	<string name="commodity_detail_favorite">收藏</string>
	<string name="commodity_detail_message">商品信息</string>
	<string name="commodity_detail_listing_date">上市日期:</string>
	<string name="commodity_detail_style">款式:</string>
	<string name="commodity_detail_textures">材质:</string>
	<string name="commodity_detail_model">货号:</string>
	<string name="commodity_detail_man_woman">男女款:</string>
	<string name="commodity_detail_colors">颜色:</string>
	<string name="spikeare_detail_tobuy">立即购买</string>
	<string name="commodity_detail_counter_price">专柜价格:</string>
	<string name="commodity_detail_letao_price">乐淘价格:</string>
	
	<string name="online_chat">在线咨询</string>
	
</resources>












