<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/empty_cart_view"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" 
    android:background="#ffefebe7">
  
    <RelativeLayout
        android:id="@+id/top_relative"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip" >

	    <ImageView
	        android:id="@+id/titleBg"
	        android:layout_width="fill_parent"
	        android:layout_height="fill_parent"
	        android:background="#106184" />
	
	    <ImageView
	        android:id="@+id/progressImage"
	        android:layout_width="0.0dip"
	        android:layout_height="fill_parent"
	        android:background="@drawable/android_title_bg_progress"
	        android:visibility="gone" />
	
	    <Button
	        android:id="@+id/titleRightButton"
	        style="\@style/title_right_button"
	        android:layout_width="100.0dip"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_centerVertical="true"
	        android:layout_gravity="center_vertical"
	        android:layout_marginRight="5.0dip"
	        android:layout_marginTop="2.0dip"
	        android:visibility="gone" />
	
	    <TextView
	        android:id="@+id/titleText"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:layout_centerInParent="true"
	        android:textSize="15dp"
	        android:padding="10.0dip"
	        android:text="我的京东"
	        android:textColor="@color/white"
	        android:singleLine="true" />

	</RelativeLayout>
	
    <ScrollView android:id="@+id/mScroll" 
        android:layout_width="fill_parent"
		android:layout_height="wrap_content" 
		android:layout_below="@id/top_relative"
		android:fadingEdge="none">
		<LinearLayout android:id="@+id/detail_gallery_layout"
			android:orientation="vertical" android:layout_width="fill_parent"
			android:layout_height="wrap_content" android:background="@color/white">
			<!-- 上方图片 -->
			<RelativeLayout 
			    android:layout_width="fill_parent"
				android:layout_height="wrap_content">
				<com.appkefu.appkehu_3.BrandGallery 
				    android:id="@+id/commodity_detail_gallery"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:spacing="60dip" />
				<ImageView android:id="@+id/commodity_detail_left_Img"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_alignParentLeft="true" 
					android:src="@drawable/toleft_mark"
					android:layout_marginLeft="10dip" 
					android:visibility="visible" />
				<ImageView android:id="@+id/commodity_detail_right_Img"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:layout_centerVertical="true"
					android:layout_alignParentRight="true" 
					android:src="@drawable/toright_mark"
					android:layout_marginRight="10dip" 
					android:visibility="visible" />
			</RelativeLayout>

			<!-- 商品名称和价格 -->
			<LinearLayout android:orientation="vertical" 
			    android:id="@+id/shoe_price_info"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content"
				android:background="@drawable/bg4" 
				android:layout_margin="5dip" 
				android:gravity="center">
				<TextView android:id="@+id/shoe_title"
					android:layout_width="fill_parent" 
					android:layout_marginLeft="10dip"
					android:layout_marginTop="2dip" 
					android:layout_height="wrap_content"
					android:textSize="14sp" 
					android:textColor="@color/spikearedetail_productname_color"
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:textStyle="bold" 
					android:layout_marginBottom="5dip" 
					android:gravity="center"/>
				<LinearLayout android:id="@+id/specially_price"
					android:orientation="horizontal" 
					android:paddingLeft="10dip"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dip" 
					android:visibility="visible">
					<TextView android:id="@+id/lable_specially_price"
						android:layout_width="85dip" 
						android:layout_height="wrap_content"
						android:textSize="14sp" 
						android:textColor="@color/pink"
						android:gravity="left" />
					<TextView android:id="@+id/value_specially_price"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="18sp" 
						android:textColor="@color/pink"
						android:gravity="left" />
				</LinearLayout>
			</LinearLayout>
			<!-- 尺码选择 -->
			<LinearLayout 
			    android:id="@+id/detail_size_click_layout"
				android:orientation="horizontal" 
				android:paddingLeft="10dip"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content"
					android:layout_height="wrap_content" 
					android:textSize="14sp"
					android:textColor="@color/home_list_color" 
					android:layout_gravity="center_vertical"
					android:text="@string/commodity_detail_size" />
				<LinearLayout android:id="@+id/detail_size_layout"
					android:layout_width="wrap_content" 
					android:layout_height="wrap_content"
					android:background="@drawable/detail_has_size_bg">
					
					<TextView android:id="@+id/value_hassize"
						android:layout_width="190dip" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/home_list_color"
						android:gravity="center_vertical" 
						android:layout_gravity="center_vertical"
						android:singleLine="true" 
						android:paddingLeft="10dip" 
						android:text="40/41/42/43/44/45"/> 
				</LinearLayout>
			</LinearLayout>
			<!-- 购物车和收藏 -->
			<LinearLayout android:orientation="horizontal"
				android:layout_marginTop="10dip" 
				android:gravity="center_horizontal"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content">
				<TextView android:id="@+id/detail_tobuymust_button"
					android:background="@drawable/btn_pink" 
					android:layout_marginRight="10dip"
					android:layout_width="145dip" 
					android:layout_height="wrap_content"
					android:gravity="center" 
					android:text="@string/spikeare_detail_tobuy"
					android:textColor="@color/white" 
					android:textSize="18sp" />
				<TextView android:id="@+id/detail_buy_button"
					android:background="@drawable/btn_blue" 
					android:layout_width="145dip"
					android:layout_height="wrap_content" 
					android:gravity="center"
					android:text="@string/commodity_detail_input_cart"
					android:textColor="@color/white" 
					android:textSize="18sp" />
			</LinearLayout>
			<!-- 商品信息 -->
			<LinearLayout android:orientation="vertical"
				android:id="@+id/shoe_definite_info" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:background="@drawable/bg4"
				android:layout_margin="5dip">
				<TextView android:layout_width="fill_parent"
					android:layout_marginLeft="10dip" 
					android:layout_marginTop="2dip"
					android:layout_height="wrap_content" 
					android:textAppearance="?android:attr/textAppearanceSmall"
					android:layout_marginBottom="5dip" 
					android:textSize="14sp"
					android:textColor="@color/spikearedetail_productname_color"
					android:text="@string/commodity_detail_message" />
				<ImageView android:id="@+id/gallery_line"
					android:background="@color/note_gray" 
					android:layout_height="1dip"
					android:layout_width="fill_parent" />
				<LinearLayout android:orientation="horizontal"
					android:paddingLeft="10dip" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_marginBottom="5dip">
					<TextView android:layout_width="65dip"
						android:layout_height="wrap_content" 
						android:textSize="12sp"
						android:textColor="@color/spikearedetail_productname_color"
						android:gravity="right" 
						android:text="@string/commodity_detail_listing_date" />
					<TextView android:id="@+id/value_listing_date"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/home_list_color"
						android:gravity="left" />
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:paddingLeft="10dip" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_marginBottom="5dip">
					<TextView android:layout_width="65dip"
						android:layout_height="wrap_content" 
						android:textSize="12sp"
						android:textColor="@color/spikearedetail_productname_color"
						android:gravity="right" 
						android:text="@string/commodity_detail_style" />
					<TextView android:id="@+id/value_style"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/home_list_color"
						android:gravity="left" />
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:paddingLeft="10dip" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_marginBottom="5dip">
					<TextView android:layout_width="65dip"
						android:layout_height="wrap_content" 
						android:textSize="12sp"
						android:textColor="@color/spikearedetail_productname_color"
						android:gravity="right" 
						android:text="@string/commodity_detail_textures" />
					<TextView android:id="@+id/value_textures"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/home_list_color"
						android:gravity="left" />
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:paddingLeft="10dip" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_marginBottom="5dip">
					<TextView android:layout_width="65dip"
						android:layout_height="wrap_content"
						android:textSize="12sp"
						android:textColor="@color/spikearedetail_productname_color"
						android:gravity="right"
						android:text="@string/commodity_detail_model" />
					<TextView android:id="@+id/value_model"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/home_list_color"
						android:gravity="left" />
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:paddingLeft="10dip" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_marginBottom="5dip">
					<TextView android:layout_width="65dip"
						android:layout_height="wrap_content" 
						android:textSize="12sp"
						android:textColor="@color/spikearedetail_productname_color"
						android:gravity="right" 
						android:text="@string/commodity_detail_man_woman" />
					<TextView android:id="@+id/value_man_woman"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/home_list_color"
						android:gravity="left" />
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:paddingLeft="10dip" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_marginBottom="5dip">
					<TextView android:layout_width="65dip"
						android:layout_height="wrap_content" 
						android:textSize="12sp"
						android:textColor="@color/spikearedetail_productname_color"
						android:gravity="right" 
						android:text="@string/commodity_detail_colors" />
					<TextView android:id="@+id/value_colors"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/home_list_color"
						android:gravity="left" />
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:paddingLeft="10dip" 
					android:layout_width="fill_parent"
					android:layout_height="wrap_content" 
					android:layout_marginBottom="5dip">
					<TextView android:id="@+id/lable_counter_price"
						android:layout_width="65dip" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/spikearedetail_productname_color"
						android:gravity="right"
						android:text="@string/commodity_detail_counter_price" />
					<TextView android:id="@+id/value_counter_price"
						android:layout_width="fill_parent" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/home_list_color"
						android:gravity="left" 
						android:textStyle="bold" />
				</LinearLayout>
				<LinearLayout android:orientation="horizontal"
					android:layout_marginBottom="5dip" 
					android:paddingLeft="10dip"
					android:layout_width="fill_parent" 
					android:layout_height="wrap_content">
					<TextView android:id="@+id/lable_letao_price"
						android:layout_width="65dip" 
						android:layout_height="wrap_content"
						android:textSize="12sp" 
						android:textColor="@color/spikearedetail_productname_color"
						android:gravity="right" 
						android:text="@string/commodity_detail_letao_price" />
					<TextView android:id="@+id/value_letao_price"
						android:textStyle="bold" 
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" 
						android:textSize="12sp"
						android:textColor="@color/home_list_color" 
						android:gravity="left" />
				</LinearLayout>
				<TextView android:id="@+id/detail_favorite_button"
					android:background="@drawable/btn_blue" 
					android:layout_width="110dip"
					android:layout_height="wrap_content" 
					android:gravity="center"
					android:layout_gravity="center_horizontal" 
					android:text="@string/online_chat"
					android:textColor="@color/white" 
					android:textSize="18sp" />

			</LinearLayout>
			<TextView android:id="@+id/commodity_detail_otherhot_text"
				android:layout_marginTop="1dip" 
				android:gravity="center_vertical"
				android:paddingLeft="10dip" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content" 
				android:textColor="@color/blue"
				android:text="推荐商品" 
				android:paddingTop="5dip" 
				android:paddingBottom="0dip" />
			<ListView 
			    android:id="@+id/commodity_detail_otherhot_product_list"
				android:layout_width="fill_parent" 
				android:layout_height="wrap_content" />
		</LinearLayout>
	</ScrollView>
</RelativeLayout>























